Added the details about Weather
1.Added weather image ,city name and Tempreture.

2.Other details like Humidity and Wind speed.

--- a/style.css
+++ b/style.css
@@ -52,3 +52,48 @@
 .search button img{
     width:16px;
 }
+
+
+.Weather-icon{
+    width:170px;
+    margin-top:30px;
+}
+
+.Weather h1{
+    font-size:80px;
+    font-weight: 500;
+
+}
+
+.Weather h2{
+    font-size: 45px;
+    font-weight: 400;
+    margin-top:-10px;
+}
+
+.details{
+    display:flex;
+    align-items:center;
+    justify-content:space-between ;
+    padding:0 20px;
+    margin-top: 50px;
+}
+
+.col{
+    display:flex;
+    text-align: left;
+    align-items: center;
+}
+
+.col img{
+    width:40px;
+    margin-right: 10px;
+}
+
+.Humidity, .Wind{
+    font-size:25px;
+    margin-left:6px;
+    color: green;
+}
+
+
